# CppTcp

./: .gitignore  ApplicationUtilities.cpp  ApplicationUtilities.h  CMakeLists.txt  CppTcpClient.cpp  CppTcpServer.cpp  GlobalDefinitions.h  IByteStream.cpp  IByteStream.h  ProgramOption.h  README.md  StaticLogger.cpp  StaticLogger.h  TcpClient.cpp  TcpClient.h  TcpServer  TcpServer.cpp
